// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`addAddress 1`] = `"Read Only Mode"`;

exports[`addAddress 2`] = `
Array [
  Array [
    "addr1",
    "addr2",
    1,
  ],
]
`;

exports[`addCustodian 1`] = `"Read Only Mode"`;

exports[`addCustodian 2`] = `
Array [
  Array [
    "custodianAddr",
  ],
]
`;

exports[`addOtherContracts 1`] = `"Read Only Mode"`;

exports[`addOtherContracts 2`] = `
Array [
  Array [
    "otherContractAddr",
  ],
]
`;

exports[`getAddrs 1`] = `
Object {
  "candidate": Object {
    "address": "candidatre",
    "balance": "10",
  },
  "moderator": Object {
    "address": "moderator",
    "balance": "10",
  },
}
`;

exports[`getStates 1`] = `
Object {
  "custodianContractAddrs": Array [
    Object {
      "address": "custodianAddr1",
      "balance": "10",
    },
    Object {
      "address": "custodianAddr2",
      "balance": "10",
    },
    Object {
      "address": "custodianAddr3",
      "balance": "10",
    },
  ],
  "isStarted": true,
  "lastOperationTime": 100000,
  "operationCoolDown": 100000,
  "otherContractAddrs": Array [
    Object {
      "address": "otherAddr1",
      "balance": "10",
    },
    Object {
      "address": "otherAddr2",
      "balance": "10",
    },
    Object {
      "address": "otherAddr3",
      "balance": "10",
    },
  ],
  "poolAddrsCold": Array [
    Object {
      "address": "coldAddr1",
      "balance": "10",
    },
    Object {
      "address": "coldAddr2",
      "balance": "10",
    },
    Object {
      "address": "coldAddr3",
      "balance": "10",
    },
  ],
  "poolAddrsHot": Array [
    Object {
      "address": "hotAddr1",
      "balance": "10",
    },
    Object {
      "address": "hotAddr2",
      "balance": "10",
    },
    Object {
      "address": "hotAddr3",
      "balance": "10",
    },
  ],
  "votingData": Object {
    "started": 123456789000,
    "totalVoters": "3",
    "votedAgainst": "5",
    "votedFor": "10",
  },
  "votingStage": "Moderator",
}
`;

exports[`removeAddress 1`] = `"Read Only Mode"`;

exports[`removeAddress 2`] = `
Array [
  Array [
    "addr",
    1,
  ],
]
`;

exports[`startContractVoting 1`] = `"Read Only Mode"`;

exports[`startContractVoting 2`] = `
Array [
  Array [
    "candidateAdddr",
  ],
  Array [
    "candidateAdddr",
  ],
]
`;

exports[`startManager 1`] = `"Read Only Mode"`;

exports[`startManager 2`] = `
Array [
  Array [],
  Array [],
]
`;

exports[`startModeratorVoting 1`] = `"Read Only Mode"`;

exports[`startModeratorVoting 2`] = `
Array [
  Array [],
  Array [],
]
`;

exports[`terminateByTimeout 1`] = `"Read Only Mode"`;

exports[`terminateByTimeout 2`] = `
Array [
  Array [],
  Array [],
]
`;

exports[`terminateContractVoting 1`] = `"Read Only Mode"`;

exports[`terminateContractVoting 2`] = `
Array [
  Array [],
  Array [],
]
`;

exports[`vote 1`] = `"Read Only Mode"`;

exports[`vote 2`] = `
Array [
  Array [
    true,
  ],
  Array [
    true,
  ],
]
`;
